[gd_scene load_steps=10 format=3 uid="uid://6h8h8v0ce2ss"]

[ext_resource type="Texture2D" uid="uid://ccaaq5g4f4vv6" path="res://Sprites/Background.png" id="1_dcd05"]
[ext_resource type="FontVariation" uid="uid://buu8kqux736gm" path="res://Fonts/Game_Font.tres" id="2_twseb"]
[ext_resource type="StyleBox" uid="uid://dpnup4bx50wav" path="res://Styles/Default.tres" id="3_vfvfb"]
[ext_resource type="Texture2D" uid="uid://4fn6pnqai664" path="res://Sprites/play.png" id="3_x550e"]
[ext_resource type="Script" path="res://Scripts/Play.gd" id="5_u6ens"]
[ext_resource type="FontVariation" uid="uid://b5wirw5h8bo8n" path="res://Fonts/Score_Font.tres" id="6_ii00f"]
[ext_resource type="AudioStream" uid="uid://c86ywhoqukjni" path="res://BGM/music_zapsplat_astro_race.mp3" id="6_ukjnh"]
[ext_resource type="Texture2D" uid="uid://dfl823806nh3s" path="res://Sprites/music on.png" id="8_8f2hm"]
[ext_resource type="Script" path="res://addons/admob/admob.gd" id="9_1rgk6"]

[node name="MainMenu" type="TextureRect"]
modulate = Color(0.133333, 0.67451, 0.890196, 1)
clip_contents = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_dcd05")
expand_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Game Over" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(100, 100, 100, 1)
theme_override_colors/font_outline_color = Color(0.588235, 0.588235, 0.588235, 1)
theme_override_fonts/font = ExtResource("2_twseb")
theme_override_font_sizes/font_size = 96
text = "Fasty"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
theme_override_styles/normal = ExtResource("3_vfvfb")
theme_override_styles/hover = ExtResource("3_vfvfb")
theme_override_styles/pressed = ExtResource("3_vfvfb")
theme_override_styles/disabled = ExtResource("3_vfvfb")
theme_override_styles/focus = ExtResource("3_vfvfb")
icon = ExtResource("3_x550e")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("5_u6ens")

[node name="Label" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_ii00f")
theme_override_font_sizes/font_size = 30
text = "Â© M-Studio Game Development, All rights reserved"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_ii00f")
theme_override_font_sizes/font_size = 30
text = "Music"

[node name="CheckBox" type="Button" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
theme_override_styles/normal = ExtResource("3_vfvfb")
theme_override_styles/hover = ExtResource("3_vfvfb")
theme_override_styles/pressed = ExtResource("3_vfvfb")
theme_override_styles/disabled = ExtResource("3_vfvfb")
theme_override_styles/focus = ExtResource("3_vfvfb")
toggle_mode = true
icon = ExtResource("8_8f2hm")
flat = true
expand_icon = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_ukjnh")
autoplay = true

[node name="AdMobEditorPlugin" type="EditorPlugin" parent="."]
script = ExtResource("9_1rgk6")

[connection signal="button_down" from="MarginContainer/VBoxContainer/Play" to="MarginContainer/VBoxContainer/Play" method="_on_button_down"]
[connection signal="toggled" from="MarginContainer/HBoxContainer/CheckBox" to="MarginContainer/VBoxContainer/Play" method="_on_check_box_toggled"]
